fixed port and service name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
     services:
-      weather:
+      bot:
         build: ./app
         container_name: bot
         restart: unless-stopped
         ports:
-          - 127.0.0.1:$PORT:8000
+          - 127.0.0.1:8000:8000
