--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,9 @@
         restart: unless-stopped
         ports:
           - 127.0.0.1:$PORT:8000
+        environment:
+          - OLLAMA_HOST=${OLLAMA_HOST}
+          - OLLAMA_MODEL=${OLLAMA_MODEL}
+          - SYSTEM_PROMPT=${SYSTEM_PROMPT}
+          - TZ=${TZ}
+          - FQDN=${FQDN}
